# pratyabhijna

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  RUN_LOCAL.md  index.html  pyproject.toml  research1.md
.claude-plugin/: marketplace.json
artifacts/: learned_gate_v0_4.joblib  learned_gate_v0_4.metadata.json
audit/: hf_downloads.jsonl
benchmarks/: autoreport.py  driver.py  figures.py  items.py  scoring.py  stats.py
docs/: ADR-001-substrate.md  ADR-002-vimarsa-loop.md  ADR-003-bmr.md  ADR-004-bench-stats.md  AS_SHIPPED_v0.1.md  COMPLETION_PROMISES.md  COMPLETION_PROMISES_v0.2.md  COMPLETION_PROMISES_v0.3.md  COMPLETION_PROMISES_v0.4.md  HOWTO_JUDGE.md  PRD.md  PRD_v0.2.md  PRD_v0.3.md  PRD_v0.4.md  RELEASE_NOTES_v0.2.md  RELEASE_NOTES_v0.3.md  RELEASE_NOTES_v0.4.md  RUN_LOCAL.md  RUN_ON_BEDROCK.md  SPEC.md  SPEC_v0.2.md  SPEC_v0.3.md  SPEC_v0.4.md  operator-spec.md  plan.md  research-extended.md
paper/: autoreport.tex  autoreport_v0.4.tex  main.tex  references.bib
plugin/: .mcp.json  README.md  marketplace.json
presentation/: index.html
scripts/: anti_stub_check.py  build_paper_flowchart_pngs.py  build_paper_tables.py  cascade_revision_probe.py  clean_substrate_gate.py  generate_v0_4_showcase.py  haiku_one_shot.py  judge_prompt_v0_4.txt  judge_subset.py  phase3_active_inference_gate.py  phase4_causal_vimarsa_gate.py  phase8_gate_stack.py  prepare_site_data.py  prove_gate.py  ralph_loop_local.sh  ralph_promise_gate.sh  recover_judge_formatted_sha.py  regenerate_results_status.py  run_judge_bridge.py  run_probes.py  run_v0_4_bedrock.py  showcase_specs.toml  smoke_plugin.py  synthesize_results.py  train_learned_gate.py  validate_paper.py  verify_artifact.py  verify_bib.py  verify_outer_host_loads_pce.py  verify_plugin.py  verify_real_model.py  verify_remote_pushed.py
tests/: cascade_two_pass_test.py  conftest.py  integrity_probe_test.py  test_active_inference_content_present.py  test_apohana_hopfield.py  test_cascade.py  test_cit_temperature.py  test_cit_temperature_entropy_probe.py  test_cit_temperature_kruntime.py  test_cli_doc_examples.py  test_commit_policies.py  test_commit_policy_multiplex.py  test_fe_budget_gating.py  test_free_energy_budget.py  test_haiku_rate_limit_error.py  test_hero_video_present.py  test_image_prompts_md.py  test_integrity_budget_probe.py  test_jnana_aspect_bmr.py  test_judge_audit_v04.py  test_judge_bridge_dryrun.py  test_no_bedrock_in_user_prose.py  test_no_version_in_paper_prose.py  test_paper_flowchart_pngs_present.py  test_paper_visuals_present.py  test_pce_cli.py  test_pce_config.py  test_pce_config_precedence.py  test_pipeline.py  test_plugin_manifests.py  test_plugin_v0_4_surface.py  test_stats.py  (+8 more)
(+356 files in other folders)
