[project]
name = "pratyabhijna-creative-engine"
version = "0.2.0"
description = "Pratyabhijna x Active Inference creative-cognition plugin (PCE) v0.2 - Haiku-substrate cascade with causal two-pass vimarsa revision, signed apohana, and four-arm benchmark (local_bare, local_cascade, haiku_bare, haiku_cascade)."
authors = [{name = "Sharath Sathish", email = "sharath@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
keywords = ["pratyabhijna", "active-inference", "creativity", "claude-code", "mcp", "bayesian-model-reduction", "vimarsa"]

dependencies = [
  # Core scientific stack
  "numpy>=1.26,<2.3",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  # Embeddings (matches attractor-flow choice)
  "sentence-transformers>=3.0",
  # Local LM substrate (downloaded from HuggingFace)
  "transformers>=4.44",
  "torch>=2.2",
  "accelerate>=0.30",
  "huggingface-hub>=0.24",
  # Active inference (pypi name is `inferactively-pymdp`; v1.0 introduces JAX backend, legacy numpy still available)
  "inferactively-pymdp>=0.0.7.1",
  # MCP
  "mcp>=1.0",
  "pydantic>=2.7",
  "tiktoken>=0.7",
  # Stats
  "statsmodels>=0.14",
  "pandas>=2.2",
  # Misc
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.5",
  "mypy>=1.10",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pce"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-ra -q --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "real_model: requires a real model loaded from HuggingFace (deselect with '-m \"not real_model\"')",
]

[tool.coverage.run]
source = ["src/pce"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == \"__main__\":",
]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
files = ["src/pce", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM"]
# Math operators use single-uppercase names (`K` candidates, `F` free energy);
# we keep these intentionally and silence pep8-naming for those identifiers.
ignore = ["E501", "N802", "N803", "N806", "N815", "SIM102", "SIM105", "SIM108", "UP028"]
